# fog-of-war-chess

./: .gitignore  PRODUCT_SPEC.md  README.md  pyproject.toml  run.py
app/: __init__.py  ai.py  board.py  game.py  pieces.py  routes.py
app/static/: game.js  style.css
app/templates/: index.html
tests/: __init__.py  test_ai.py  test_api.py  test_game.py  test_pieces.py  test_special_moves.py  test_visibility.py
