[project]
name = "fog-of-war-chess"
version = "1.0.0"
description = "Fog-of-War Chess - a single-player chess variant with limited visibility"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
